--- a/AppForeignExchange/AppForeignExchange/AppForeignExchange.csproj
+++ b/AppForeignExchange/AppForeignExchange/AppForeignExchange.csproj
@@ -35,6 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="ApiService.cs" />
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
@@ -44,6 +45,7 @@
     <Compile Include="Infrastructure\InstanceLocator.cs" />
     <Compile Include="Interfaces\ILocalize.cs" />
     <Compile Include="Models\Rate.cs" />
+    <Compile Include="Models\Response.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Resource.Designer.cs">
       <AutoGen>True</AutoGen>
