--- a/AppForeignExchange/AppForeignExchange.iOS/AppForeignExchange.iOS.csproj
+++ b/AppForeignExchange/AppForeignExchange.iOS/AppForeignExchange.iOS.csproj
@@ -171,6 +171,9 @@
     <ImageAsset Include="Resources\Localize.xcassets\AppIcons.appiconset\Contents.json">
       <InProject>false</InProject>
     </ImageAsset>
+    <ImageAsset Include="Resources\Localize.xcassets\AppIcons.appiconset\Icon-App-76x76@1x.png">
+      <InProject>false</InProject>
+    </ImageAsset>
     <ImageAsset Include="Resources\Localize.xcassets\LaunchImages.launchimage\Contents.json">
       <InProject>false</InProject>
     </ImageAsset>
